<resources>
    <string name="app_name">MyPalm-PHC-Attendance</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Welcome</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="server_select">Server Selection</string>
    <string name="plantation">Plantation</string>
    <string name="mill">Mill</string>
    <string name="forgot_password">forgot password</string>
    <string name="username">UserName</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="kindly_fill_all_fields">Please enter your username and password to continue.</string>
    <string name="try_again_str">Try Again</string>
    <string name="continue_str">Continue</string>
    <string name="enroll_face">Enroll</string>
    <string name="attendance">Attendance</string>
    <string name="note_for_face_reg">Please turn your face left and right for the scanning process.\\n</string>
    <string name="register">Register</string>
    <string name="str_stop">Stop</string>
    <string name="emp_reg">Employee Register</string>
    <string name="emp_name">Employee Register</string>
    <string name="save">Save</string>
    <string name="register_face">Register Face</string>
    <string name="face_already_exist">Face already exist</string>
    <string name="total_employees">Total Employees</string>
    <string name="view_employees">View Employees</string>
    <string name="today_attendance">Today</string>
    <string name="today">Today</string>
    <string name="present">Present</string>
    <string name="disclaimer"> <string name="disclaimer"><font color="#ff0000"><b>*</b></font> Please press button to register your attendance</string>
</string>
    <string name="emp_code">Emp-Code</string>
    <string name="update_str">Update</string>
    <string name="absent">Absent</string>
    <string name="start_attendance">Start Attendance</string>
    <string name="change_pass">Change Password</string>
    <string name="data_upload">Data Upload</string>
    <string name="updata_loc_data">Download Offline Data</string>
    <string name="server_config">Server Config</string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>
    <string name="mill_code">Mill Code</string>
    <string name="select_site_details">Select Site Details</string>
    <string name="estate">Estate</string>
    <string name="hint_estate">Select Estate</string>
    <string name="division">Division</string>
    <string name="hint_division">Select Division</string>
    <string name="block">Block</string>
    <string name="hint_block">Select Block</string>
    <string name="okey">Okay</string>
    <string name="add_str">Add</string>
    <string name="start_detection">Start Detection</string>
    <string name="stop_detection">Stop Detection</string>
    <string name="stop_attendance">Stop Attendance</string>
    <string name="no_face_detected">No face detected</string>
    <string name="multiple_faces_detected">" Multiple faces detected"</string>
    <string name="no_match_found">No match found</string>
    <string name="select_employee">Select Employee</string>
    <string name="select_employee_type">Select Employee Type</string>
    <string name="no_offline_data">No Offline Data</string>
    <string name="try_again">Try Again</string>
    <string name="back">Back</string>
    <string name="uploading_data">Uploading data</string>
    <string name="upload_data">Upload Data</string>
    <string name="no_data_to_upload">No data to upload</string>
    <string name="start_uploading">Start Uploading</string>
    <string name="select_estate">Select Estate</string>
    <string name="select_division">Select Division</string>
    <string name="select_block">Delect Block</string>
    <string name="search">search</string>
    <string name="no_data_found">No data found</string>
    <string name="no_offline_data_to_upload">No offline data to upload</string>
    <string name="reset">Reset</string>
    <string name="select_site">Select Site</string>
</resources>