<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <!-- Title -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/mirage"
            android:paddingVertical="12dp"
            android:text="@string/server_select"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <!-- Radio group for modes -->
        <RadioGroup
            android:id="@+id/radioGroupMode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="18dp"
            android:paddingTop="12dp">

            <RadioButton
                android:id="@+id/radio_plantation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plantation" />

            <RadioButton
                android:id="@+id/radio_mill"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mill" />

        </RadioGroup>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_continue"
            style="@style/ButtonFill"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/continue_str"
            android:textColor="@color/white"
            app:backgroundTint="@color/green"
            android:layout_gravity="center"
            android:paddingHorizontal="24dp"
            android:layout_marginBottom="12dp"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>


</com.google.android.material.card.MaterialCardView>