<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/img_app_bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.attendance.MakeAttendanceFragment">


    <include
        android:id="@+id/top_tool_bar"
        layout="@layout/tool_bar_custom"
        tools:layout_constraintEnd_toEndOf="parent"
        tools:layout_constraintStart_toStartOf="parent"
        tools:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_tool_bar">

        <androidx.camera.view.PreviewView
            android:id="@+id/previewView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/face"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="12dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/previewView" />


        <ImageButton
            android:id="@+id/switch_cam"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="24dp"
            android:layout_marginVertical="6dp"
            android:background="@drawable/btn_bg_white_lines"
            android:src="@drawable/ic_camera_switch"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout6"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:background="@drawable/view_gradient_black"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:background="@drawable/btn_bg_white_lines"
                android:drawablePadding="8dp"
                android:letterSpacing=".08"
                android:paddingHorizontal="28dp"
                android:paddingVertical="18dp"
                android:text="@string/register"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guideline6" />

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/layout_area_info"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/img_app_bg"
        android:gravity="center"
        android:paddingHorizontal="24dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_tool_bar">

        <TextView
            style="@style/CustomTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="16sp"
            android:background="@drawable/card_bg_line"
            android:text="@string/select_site_details" />

        <TextView
            style="@style/CustomTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/estate" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_estate"
            style="@style/SelectorEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_estate"
            android:text="" />

        <TextView
            style="@style/CustomTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/division" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_division"
            style="@style/SelectorEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:hint="@string/hint_division"
            android:text="" />

        <TextView
            style="@style/CustomTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/block" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_block"
            style="@style/SelectorEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_block"
            android:text="" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginVertical="24dp"
            android:background="@drawable/btn_bg_white_lines"
            android:paddingHorizontal="70dp"
            android:text="@string/save"
            android:textColor="@color/btn_green"
            android:textSize="14sp"
            android:textStyle="bold"
            app:backgroundTint="@null" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_status"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/img_app_bg"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_tool_bar">

        <TextView
            android:id="@+id/tv_atteb_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="20dp"
            android:text="Saved successfully"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="24dp" />

        <TextView
            android:id="@+id/tv_atteb_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="20dp"
            android:text="Saved successfully"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottieAnimationView"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginVertical="20dp"
            app:lottie_autoPlay="true"
            app:lottie_loop="false"
            app:lottie_rawRes="@raw/saved" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:paddingVertical="30dp">


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_ok"
                style="@style/ButtonFill"
                app:backgroundTint="@color/green"
                android:layout_width="wrap_content"
                android:paddingHorizontal="60dp"
                android:text="@string/okey"
                android:textAllCaps="false" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>