<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_app_bg"
    tools:context=".ui.attendance.FaceRecognitionFragment">

    <include
        android:id="@+id/top_tool_bar"
        layout="@layout/tool_bar_custom"
        tools:layout_constraintEnd_toEndOf="parent"
        tools:layout_constraintStart_toStartOf="parent"
        tools:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/ll_bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_tool_bar">

        <androidx.camera.view.PreviewView
            android:id="@+id/previewView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <LinearLayout
            android:id="@+id/ll_status"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:layout_marginVertical="16dp"
            android:background="@drawable/btn_bg_white_fill"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/img_face">

            <TextView
                android:id="@+id/tv_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="8dp"
                android:text="N/A"
                android:textColor="@color/mirage"
                android:textSize="14sp"
                android:textStyle="bold" />

        </LinearLayout>

        <ImageView
            android:id="@+id/img_face"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_margin="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/ll_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white_70"
        android:orientation="horizontal"
        android:weightSum="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_attendance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:background="@drawable/btn_bg_white_fill"
                android:backgroundTint="@color/green"
                android:paddingVertical="7dp"
                android:text="@string/start_attendance"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintStart_toStartOf="parent" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <ImageView
                android:id="@+id/img_switch_cam"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="8dp"
                android:background="@drawable/btn_bg_white_fill"
                android:backgroundTint="@color/green"
                android:padding="12dp"
                android:src="@drawable/ic_camera_switch"
                app:circularflow_radiusInDP="40"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_area_info"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/img_app_bg"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingHorizontal="24dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_tool_bar">

        <TextView
            style="@style/CustomTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/card_bg_line"
            android:gravity="center"
            android:text="@string/select_site_details"
            android:textSize="16sp" />

        <TextView
            style="@style/CustomTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/estate" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_estate"
            style="@style/SelectorEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_estate"
            android:text="" />

        <TextView
            style="@style/CustomTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/division" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_division"
            style="@style/SelectorEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:hint="@string/hint_division"
            android:text="" />

        <TextView
            style="@style/CustomTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/block" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_block"
            style="@style/SelectorEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_block"
            android:text="" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginVertical="24dp"
            android:background="@drawable/btn_bg_white_lines"
            android:backgroundTint="@color/green"
            android:paddingHorizontal="70dp"
            android:text="@string/save"
            android:textColor="@color/green"
            android:textSize="14sp"
            android:textStyle="bold"
            app:backgroundTint="@null" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_status"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/img_app_bg"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_tool_bar">

        <TextView
            android:id="@+id/tv_atteb_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="20dp"
            android:paddingHorizontal="24dp"
            android:text="Saved successfully"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="24dp" />

        <TextView
            android:id="@+id/tv_atteb_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="20dp"
            android:text="Saved successfully"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:visibility="gone" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottieAnimationView"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginVertical="20dp"
            app:lottie_autoPlay="true"
            app:lottie_loop="false"
            app:lottie_rawRes="@raw/saved" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingVertical="30dp">


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_ok"
                style="@style/ButtonFill"
                android:layout_width="wrap_content"
                android:backgroundTint="@color/green"
                android:paddingHorizontal="60dp"
                android:text="@string/okey"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:visibility="visible" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>